Fix content height after spacing adjustment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@ body {
 }
 
 .content {
-    @apply flex flex-col flex-1 bg-theme text-white max-h-[calc(100dvh-0.375rem-0.375rem)] my-2 mr-2 rounded-lg p-1.5 overflow-scroll;
+    @apply flex flex-col flex-1 bg-theme text-white max-h-[calc(100dvh-0.5rem-0.5rem)] my-2 mr-2 rounded-lg p-1.5 overflow-scroll;
 }
 
 @layer base {
